tester for folders

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h1>Start Bootstrap</h1>
             <h3>Free Bootstrap Themes &amp; Templates</h3>
             <br>
-            <a href="janeGoodall.html" class="btn btn-dark btn-lg">Jane Goodall</a>
+            <a href="html/janeGoodall.html" class="btn btn-dark btn-lg">Jane Goodall</a>
         </div>
     </header>
 
