added scrolling and navigation mechanisms

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FEMALE BADASSES</title>
+    <title>Not Some Lady</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,8 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Start Bootstrap</h1>
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <h1>Not Some Lady</h1>
             <br>
             <a href="html/janeGoodall.html" class="btn btn-dark btn-lg">Jane Goodall</a>
         </div>
