made template for the index/homepage
next time: customize the page to include latest inserts for the blog

--- a/html/pageTemp.html
+++ b/html/pageTemp.html
@@ -93,6 +93,32 @@
 </head>
 <body>
 
+<!-- Navigation -->
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand">
+                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+            </li>
+            <li>
+                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+            </li>
+            <li>
+                <a href="#about" onclick=$("#menu-close").click();>About</a>
+            </li>
+            <li>
+                <a href="html/person-template.html" onclick=$("#menu-close").click();>Template</a>
+            </li>
+            <li>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+            </li>
+            <li>
+                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+            </li>
+        </ul>
+    </nav>
+
 
 <div id="fullpage">
 	
@@ -293,7 +319,7 @@
 	</div>
 
 
-	<div class="section" id="section7">
+	<div class="section" id="section">
 		<div class="intro page">
 
 			 <section class="biography-comic biography">
@@ -317,6 +343,21 @@
 	</div>	
 
 </div>
+
+<script type="text/javascript">
+    
+    // Closes the sidebar menu
+    $("#menu-close").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
+    // Opens the sidebar menu
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#sidebar-wrapper").toggleClass("active");
+    });
+    
+</script>
 
 
 </body>
