Finished Jane Goodall Page
Fix: Appearance

--- a/html/pageTemp.html
+++ b/html/pageTemp.html
@@ -23,7 +23,7 @@
     <!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"> <!-- Change font for the life of god -->
+   <link href="https://fonts.googleapis.com/css?family=Cardo:700|Droid+Sans" rel="stylesheet">
 
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.js"></script>
