added Chien-Shiung Wu, homepage, made shit ton of edits

--- a/html/mayaAngelou.html
+++ b/html/mayaAngelou.html
@@ -9,7 +9,7 @@
     <meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
     <meta name="Resource-type" content="Document" />
 
-    <title>Maya Angelou/title>
+    <title>Maya Angelou</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
