--- a/html/ChienShiungWu.html
+++ b/html/ChienShiungWu.html
@@ -32,12 +32,17 @@
     * --------------------------------------- */
     h1{
         font-size: 5em;
-        font-family: arial,helvetica;
-        color: #fff;
+        color: #383838;
         margin:0;
     }
-    .intro p{
-        color: #fff;
+    p{
+        color: #383838;
+    }
+
+    .portait-images{
+      
+        background-color: #ffe4e1;
+        
     }
 
     /* Centered texts in each section
@@ -81,7 +86,7 @@
         $(document).ready(function() {
             $('#fullpage').fullpage({
                 anchors: ['introduction','childhood', 'professorShip','lifeatManPro', 'scientificCon', 'legacy','sources'],
-                sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C', '#7E8F7C','#C63D0F','#1BBC9B','#C63D0F'],
+                //sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C', '#7E8F7C','#C63D0F','#1BBC9B','#C63D0F'],
                 navigation: true,
                 navigationPosition: 'right',
                 navigationTooltips: ['Introduction','Childhood', 'Professorship', 'Life at the Manhattan Project','Scientific Contribution','legacy','sources']
@@ -97,23 +102,14 @@
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+           <li>
+                <a href="../index.html" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="../index.html#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
-            </li>
-            <li>
-                <a href="html/person-template.html" onclick=$("#menu-close").click();>Template</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="../index.html#archive" onclick=$("#menu-close").click();>Archive</a>
             </li>
         </ul>
     </nav>
@@ -128,7 +124,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
@@ -158,7 +154,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                 <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
@@ -184,7 +180,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                 <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
@@ -210,7 +206,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                 <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
@@ -235,7 +231,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                 <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
@@ -258,7 +254,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                 <img src="../img/chienShiungWu.png" style="width: 100%; height: 100%">
             </div>
 
             </section>
