--- a/html/janeGoodall.html
+++ b/html/janeGoodall.html
@@ -32,12 +32,17 @@
     * --------------------------------------- */
     h1{
         font-size: 5em;
-        font-family: arial,helvetica;
-        color: #fff;
+        color: #383838;
         margin:0;
     }
-    .intro p{
-        color: #fff;
+    p{
+        color: #383838;
+    }
+
+    .portait-images{
+      
+        background-color: #a6c0b1;
+        
     }
 
     /* Centered texts in each section
@@ -81,7 +86,7 @@
         $(document).ready(function() {
             $('#fullpage').fullpage({
                 anchors: ['childhood', 'passionOrigin','secondPage','something', 'earyLife', 'research','conservation','legacy','sources'],
-                sectionsColor: ['#C63D0F', '#1BBC9B', '#C63D0F','#7E8F7C','#C63D0F', '#1BBC9B', '#7E8F7C','#C63D0F','#1BBC9B'],
+                //sectionsColor: ['#C63D0F', '#1BBC9B', '#C63D0F','#7E8F7C','#C63D0F', '#1BBC9B', '#7E8F7C','#C63D0F','#1BBC9B'],
                 navigation: true,
                 navigationPosition: 'right',
                 navigationTooltips: ['Childhood', 'Passion', 'Early Life', 'Something','Third and last page','research','conservation','legacy','sources']
@@ -98,22 +103,16 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top" onclick=$("#menu-close").click();>Start Bootstrap</a>
+                <a href="#top" onclick=$("#menu-close").click();>Where am I?</a>
             </li>
             <li>
-                <a href="#top" onclick=$("#menu-close").click();>Home</a>
+                <a href="../index.html" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="../index.html#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="html/person-template.html" onclick=$("#menu-close").click();>Template</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="../index.html#archive" onclick=$("#menu-close").click();>Archive</a>
             </li>
         </ul>
     </nav>
@@ -127,8 +126,8 @@
 
             <section class="portait-images">
 
-            <div class="images">
-                <p>Digital Portrait here</p>
+            <div class="images" id = "janegoodall">
+               <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -158,7 +157,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+               <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -184,7 +183,7 @@
             <section class="portait-images">
 
             <div class="images">
-            <p>Digital Portrait here</p>
+            <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -212,7 +211,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+               <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -239,7 +238,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -273,7 +272,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -313,7 +312,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                <img src="../img/janeGoodall.png">
             </div>
 
             </section>
@@ -335,7 +334,7 @@
             <section class="portait-images">
 
             <div class="images">
-                <p>Digital Portrait here</p>
+                <img src="../img/janeGoodall.png">
             </div>
 
             </section>
