--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="people">
 
         <div class="container">
-            <h3>hello from the makers</h3>
+            <h2>hello from our damsels</h2>
 
             <ul class="img-list">
               <li>
