matched URL link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
              
               <li>
                <div class="profile-blurb" id="chienShiungWu">
-                    <a href="html/chienShiungWu.html"><img src="img/chienShiungWuHeadshot.png" class="profile img-responsive img-circle" alt="chienShiungWu">
+                    <a href="html/ChienShiungWu.html"><img src="img/chienShiungWuHeadshot.png" class="profile img-responsive img-circle" alt="chienShiungWu">
                     <span class="text-content"><span>Chieng-Shiung Wu</span></span>
                 </div>
               </li>
